--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
-name: ffmpeg_utils
-description: "A new Flutter plugin project."
-version: 0.0.1
-homepage:
+name: flutter_ffmpeg_utils
+description: "A Flutter plugin to execute FFmpeg commands on Android and iOS."
+version: 1.0.0
+homepage: https://github.com/Raghav117/flutter_ffmpeg_utils
+repository: https://github.com/Raghav117/flutter_ffmpeg_utils
 
 environment:
   sdk: ^3.7.0
