chore: rename package to flutter_ffmpeg_utils and update references

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group = "com.raghavg1999.ffmpeg_utils"
+group = "com.raghavg1999.flutter_ffmpeg_utils"
 version = "1.0-SNAPSHOT"
 
 buildscript {
@@ -25,7 +25,7 @@ apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 
 android {
-    namespace = "com.raghavg1999.ffmpeg_utils"
+    namespace = "com.raghavg1999.flutter_ffmpeg_utils"
 
     compileSdk = 35
 
