--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.raghavg1999.ffmpeg_utils">
+  package="com.raghavg1999.flutter_ffmpeg_utils">
 </manifest>
