--- a/example/linux/CMakeLists.txt
+++ b/example/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "ffmpeg_utils_example")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.raghavg1999.ffmpeg_utils_example")
+set(APPLICATION_ID "com.raghavg1999.flutter_ffmpeg_utils_example")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
