fix: coding behaviour

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,14 @@
 include: package:flutter_lints/flutter.yaml
 
+
+analyzer:
+  errors:
+    public_member_api_docs: warning
+
+linter:
+  rules:
+    - public_member_api_docs
+
+
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
